# cw-constructor

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
core/: .gitignore  Cargo.toml  README.md
core/src/: contract.rs  entry.rs  error.rs  events.rs  execute.rs  instantiate.rs  lib.rs  models.rs  msg.rs  query.rs  state.rs  utils.rs
core/src/models/: config.rs  metadata.rs  mod.rs  token.rs  traits.rs
core/src/tests/: burn.rs  equip.rs  instantiate.rs  mod.rs  query.rs  unequip.rs
core/src/tests/utils/: cw721.rs  cw721_entry.rs  entry.rs  metadata.rs  mod.rs  shared.rs
core/src/utils/: helpers.rs  mod.rs  queries.rs  requirements.rs  validators.rs
example/: README.md
example/client/: .env.example  .gitignore  README.md  app.config.ts  app.vue  env.ts  error.vue  nuxt.config.ts  package.json  tailwind.config.ts
example/client/assets/css/: fonts.css
example/client/components/: AmountRepresentation.vue  AttributeBoost.vue  AttributeItem.vue  AttributeRecord.vue  AttributeRecordSkeleton.vue  ConnectSection.vue  ConnectedOnly.vue  ErrorSnippet.vue  MintCard.vue  ProgressPopover.vue  Spinner.vue  TokensList.vue  TxPopover.vue  WithTooltip.vue
example/client/components/Icon/: Horns.vue  Weapon.vue  Wings.vue  index.ts
example/client/components/Item/: AttributeNumeric.vue  AttributeNumericSkeleton.vue  Image.vue  ImageCard.vue  ItemPreview.vue  MintCard.vue  Trait.vue
example/client/components/Shape/: Hex.vue
example/client/components/Skeleton/: SkeletonElement.vue  SkeletonGroup.vue
example/client/components/Trait/: Card.vue  Icon.vue  Label.vue  MintCard.vue
example/client/composables/: index.ts  useAttributeAccentColor.ts  useInfoByTokenId.ts  useProgressModal.ts  useTxFlow.ts  useYearsFrom.ts
example/client/composables/blockchain/: index.ts  useAddress.ts  useBalance.ts  useChain.ts  useConnect.ts  useCw721AllNftInfo.ts  useCw721Minter.ts  useCw721NftInfo.ts  useCw721NumTokens.ts  useCw721OwnerOf.ts  useCw721Tokens.ts  useCw721TokensInfinite.ts  useCwConstructorConfig.ts  useCwConstructorInfo.ts  useCwConstructorTokens.ts  useCwMinterConfig.ts  useDenomAmount.ts  useIpfsGateway.ts  useMintConfig.ts  useNativeBalance.ts  useRpcClient.ts  useWallets.ts
example/client/composables/blockchain/contracts/: index.ts  useContract.ts  useCw721Contract.ts  useCwConstructorContract.ts  useCwMinterContract.ts
example/client/composables/blockchain/mutations/: index.ts  useCwConstructorEquipMutation.ts  useCwConstructorUnequipMutation.ts  useCwMinterMintMutation.ts
example/client/composables/helpers/: index.ts  useAsync.ts  useComputedAsync.ts
example/client/composables/loading/: consts.ts  index.ts  useInjectLoading.ts  useProvideLoading.ts
example/client/configs/: chains.ts  consts.ts  index.ts  wallets.ts
example/client/layouts/: default.vue
example/client/pages/: index.vue
example/client/pages/tokens/[tokenId]/: index.vue
example/client/plugins/: vue-query.ts
example/client/tailwind/plugins/: base.ts  index.ts  palette.ts
example/client/tailwind/plugins/components/: button.ts  card.ts  frame.ts  index.ts  link.ts  placeholder.ts
example/client/tailwind/utils/: index.ts  opacities.ts  rgb.ts
example/client/types/: callbacks.ts  contracts.ts  errors.ts  extensions.ts  index.ts  ipfs.ts  providers.ts  queries.ts  wallets.ts
example/client/utils/: errors.ts  index.ts
example/client/utils/configs/: amounts.ts  chains.ts  index.ts  wallets.ts
example/client/utils/formatters/: amount.ts  index.ts  truncateAddress.ts  truncateString.ts
example/client/utils/ipfs/: helpers.ts  index.ts  resolvers.ts
example/contracts/: README.md
example/contracts/cw-fiend-frens-constructor/: Cargo.toml  README.md
example/contracts/cw-fiend-frens-constructor/src/: lib.rs
example/contracts/cw-fiend-frens-minter/: Cargo.toml  README.md
example/contracts/cw-fiend-frens-minter/src/: lib.rs
example/contracts/cw-fiend-frens-trait-minter/: Cargo.toml  README.md
example/contracts/cw-fiend-frens-trait-minter/src/: lib.rs
example/contracts/cw-minter/: Cargo.toml  README.md
example/contracts/cw-minter/src/: contract.rs  error.rs  events.rs  execute.rs  instantiate.rs  lib.rs  msg.rs  query.rs
example/contracts/cw-minter/src/models/: config.rs  mod.rs  weights.rs
example/contracts/cw-minter/src/tests/: instantiate.rs  mint.rs  mod.rs  set_cw721.rs
example/contracts/cw-minter/src/tests/utils/: cw721.rs  entry.rs  init.rs  metadata.rs  mod.rs  shared.rs
example/contracts/cw-minter/src/utils/: get_weighted_option.rs  mod.rs  rand.rs  requirements.rs  validators.rs
example/contracts/cw721-fiend-frens/: Cargo.toml  README.md
example/contracts/cw721-fiend-frens-horns/: README.md
example/contracts/cw721-fiend-frens-trait/: Cargo.toml  README.md
example/contracts/cw721-fiend-frens-trait/src/: lib.rs
example/contracts/cw721-fiend-frens-weapon/: README.md
example/contracts/cw721-fiend-frens-wings/: README.md
example/contracts/cw721-fiend-frens/src/: lib.rs
example/contracts/shared/: Cargo.toml  README.md
example/contracts/shared/src/: lib.rs  metadata.rs
example/contracts/shared/src/tests/: metadata.rs
example/scripts/: .env.example  README.md  instantiate.config.json  package.json  tsconfig.json
example/scripts/assets/fiend-frens-horns/basic/: metadata.json
example/scripts/assets/fiend-frens-horns/curly/: metadata.json
example/scripts/assets/fiend-frens-horns/hearts/: metadata.json
example/scripts/assets/fiend-frens-horns/sharp/: metadata.json
example/scripts/assets/fiend-frens-weapon/baloon/: metadata.json
example/scripts/assets/fiend-frens-weapon/cutlery/: metadata.json
example/scripts/assets/fiend-frens-weapon/daggers/: metadata.json
example/scripts/assets/fiend-frens-wings/feather/: metadata.json
example/scripts/src/: deploy.ts  upload.ts
example/scripts/src/instantiate/: index.ts
example/scripts/src/upload/: index.ts
example/scripts/src/utils/: client.ts  index.ts  requireEnv.ts
scripts/: schema.sh  store.sh
(+15 files in other folders)
