[package]
name = "cw-constructor"
version = "0.1.0"
edition = "2021"
authors = [
  "Pau Yankovski <pyncz.dev@gmail.com>"
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
cosmwasm-storage = "~1.0.0"
cw721-base = "0.13.4"
cw721 = "0.13.4"
cw-storage-plus = "0.13.4"
cw-utils = "0.13"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.8.1"
thiserror = "1.0"
cosmwasm-schema = "1.1.4"

[dev-dependencies]
cw-multi-test = "0.13.4"
