[package]
name = "cw-constructor"
description = "Constructor contract to bind NFTs as traits for another NFT"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[features]
backtraces = [ "cosmwasm-std/backtraces" ]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = [ "staking" ] }
cosmwasm-storage = "~1.0.0"
cw721-base = "0.13.4"
cw721 = "0.13.4"
cw-storage-plus = "0.13.4"
serde = { version = "1.0.103", default-features = false, features = [ "derive" ] }
serde_json = "1.0"
schemars = "0.8.1"
thiserror = "1.0"
semver = "1.0"
cosmwasm-schema = "1.1.4"
itertools = "0.12.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
