[package]
name = "cw-fiend-frens-constructor"
description = "Constructor contract to manage Fiend Frens NFTs' traits"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[features]
backtraces = [ "cosmwasm-std/backtraces" ]
library = []

[dependencies]
cw-constructor = { path = "../../../core" }
cosmwasm-schema = "^1.2"
cosmwasm-std = "^1.2"
cw2 = "^1.1"
cw-fiend-frens-shared = { path = "../shared" }
