[package]
name          = "cw721-fiend-frens-trait"
description   = "Fiend Frens NFT Trait contract - a demo trait token for cw-constructor"
authors       = { workspace = true }
version       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "^1.2"
cosmwasm-std    = "^1.2"
cw2 = "^1.1"
cw721-base = { version = "^0.17.0", features = ["library"] }
cw-fiend-frens-shared = { path = "../shared" }
