[package]
name = "cw-fiend-frens-shared"
description = "Shared types and utils for Fiend Frens contracts"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[dependencies]
cosmwasm-schema = "1.1.4"
cosmwasm-std = "1.1.4"
cw-constructor = { path = "../../../core" }

[dev-dependencies]
serde_json = { version = "1.0", features = [ "preserve_order" ] }
